# be2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  be2.cabal  cabal.project  convo.txt  flake.nix  overlay.nix
.claude/: settings.json
crates/be2/: Cargo.toml
crates/be2-macros/: Cargo.toml
crates/be2-macros/src/: lib.rs
crates/be2/src/: main.rs
src/: Be.hs  Main.hs  build.rs  build2.rs  cli.rs  db.rs  db2.rs  format.rs  lint.rs  main.rs  old_build.rs  store.rs  task.rs  trace.rs  util.rs
src/Be/: Build.hs  Format.hs  Hash.hs  Lint.hs  Task.hs  Tasks.hs  Trace.hs  Value.hs
src/Be/Core/: Build.hs  Hash.hs  Registry.hs  Trace.hs  Value.hs
src/cli/: format.rs  lint.rs
test/: BeTest.hs
test/Be/: BuildTest.hs  TraceTest.hs
test/Be/Core/: TraceTest.hs
tools/be2-parser/: Cargo.toml
tools/be2-parser/src/: common.rs  haskell.rs  main.rs
