[package]
name = "be2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
boxcar = "0.2.14"
bytes = "1.10.1"
camino = { version = "1.2.0", features = ["serde1"] }
clap = { version = "4.5.47", features = ["derive"] }
etcetera = "0.10.0"
papaya = "0.2.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
twox-hash = "2.1.2"

[lints]
clippy.pedantic = { level = "warn", priority = -1 }
