[package]
name = "be2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
bytes = { version = "1.10.1", features = ["serde"] }
camino = { version = "1.2.0", features = ["serde1"] }
ciborium = "0.2.2"
clap = { version = "4.5.47", features = ["derive"] }
etcetera = "0.10.0"
papaya = "0.2.3"
serde = { version = "1.0.227", features = ["derive", "rc"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
twox-hash = "2.1.2"

[dev-dependencies]
similar-asserts = "1.7.0"

[lints]
clippy.pedantic = { level = "warn", priority = -1 }
