cabal-version: 3.6

name: be2
version: 0.1.0.0

common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-language: GHC2024
  default-extensions:
    , BlockArguments
    , DeriveAnyClass
    , DerivingVia
    , DuplicateRecordFields
    , NoFieldSelectors
    , OverloadedRecordDot
    , OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , hashable
    , optparse-applicative
    , serialise
    , unliftio
    , xxhash-ffi
  exposed-modules:
    , Be
    , Be.Build
    , Be.Format
    , Be.Hash
    , Be.Lint
    , Be.Trace

executable be2
  import:
    , common
    , executable
  main-is: src/Main.hs
  build-depends: be2
