cabal-version: 3.6

name: be2
version: 0.1.0.0

common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-language: GHC2024
  default-extensions:
    , BlockArguments
    , DeriveAnyClass
    , DerivingVia
    , DuplicateRecordFields
    , NoFieldSelectors
    , OverloadedRecordDot
    , OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , ChibiHash
    , aeson
    , annotated-exception
    , bytestring
    , constraints
    , optparse-applicative
    , resourcet
    , serialise
    , some-dict-of
    , sqlite-simple
    , string-interpolate
    , template-haskell
    , typed-process
    , unliftio
    , varargs
    , xdg-basedir
    , yaml
  exposed-modules:
    , Be
    , Be.Core.Build
    , Be.Core.Build.Dynamic
    , Be.Core.Build.Static
    , Be.Core.Hash
    , Be.Core.Registry
    , Be.Core.Trace
    , Be.Core.Value
    , Be.Format
    , Be.Lint

executable be2
  import:
    , common
    , executable
  main-is: src/Main.hs
  build-depends: be2

test-suite test
  import:
    , common
    , executable
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  hs-source-dirs: test
  build-depends:
    , annotated-exception
    , be2
    , hedgehog
    , serialise
    , sqlite-simple
    , tasty
    , tasty-discover
    , tasty-hedgehog
    , tasty-hunit
    , unliftio
  other-modules:
    Be.Core.Build.DynamicTest
    Be.Core.Build.StaticTest
    Be.Core.TraceTest
