[package]
name = "be2-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.1"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tree-sitter = "0.25.10"
tree-sitter-haskell = "0.23.1"

[lints]
clippy.pedantic = { level = "warn", priority = -1 }
